--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^12.1.10",
     "aws-amplify": "^4.1.3",
     "aws-sdk": "^2.945.0",
+    "isomorphic-ws": "^4.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
@@ -20,7 +21,8 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "ws": "^7.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
