--- a/frontend/amplify/backend/backend-config.json
+++ b/frontend/amplify/backend/backend-config.json
@@ -6,5 +6,13 @@
       "dependsOn": [],
       "customAuth": false
     }
+  },
+  "storage": {
+    "jacktripglobalUserServerTable1CV4VPDXSCTB2": {
+      "service": "DynamoDB",
+      "serviceType": "imported",
+      "providerPlugin": "awscloudformation",
+      "dependsOn": []
+    }
   }
 }
