--- a/regional.yaml
+++ b/regional.yaml
@@ -26,6 +26,7 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       Handler: createServer.handler
+      Timeout: 10
       Policies:
         - Version: '2012-10-17'
           Statement:
@@ -56,7 +57,7 @@ Resources:
           Statement:
             - Effect: Allow
               Action:
-                - ec2:DescribeInstanceStatus
+                - ec2:DescribeInstances
               Resource: '*'
 
   HandleFail:
