--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "aws-amplify": "^4.1.3",
     "aws-sdk": "^2.945.0",
     "isomorphic-ws": "^4.0.1",
+    "node-http-ping": "^0.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
