--- a/global.yaml
+++ b/global.yaml
@@ -111,6 +111,7 @@ Resources:
     DependsOn:
       - OnConnectRoute
       - OnDisconnectRoute
+      - OnPingRoute
     Properties:
       ApiId: !Ref WebSocketApi
   Stage:
@@ -198,6 +199,51 @@ Resources:
         - '/'
         - - 'integrations'
           - !Ref OnDisconnectIntegration
+
+  # WebSocket Ping
+  WebSocketOnPingFunction:
+    Type: 'AWS::Serverless::Function'
+    Properties:
+      FunctionName: !Sub '${AWS::StackName}-onPing-function'
+      Handler: onPing.handler
+      Environment:
+        Variables:
+          connectionTableName: !Ref WebSocketConnectionsTable
+      Policies:
+        - DynamoDBCrudPolicy:
+            TableName: !Ref WebSocketConnectionsTable
+        - Statement:
+          - Effect: Allow
+            Action:
+              - 'execute-api:ManageConnections'
+            Resource:
+              - !Sub 'arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${WebSocketApi}/*'
+  OnPingFunctionResourcePermission:
+    Type: 'AWS::Lambda::Permission'
+    Properties:
+      Action: 'lambda:InvokeFunction'
+      Principal: apigateway.amazonaws.com
+      FunctionName: !Ref WebSocketOnPingFunction
+      SourceArn: !Sub 'arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${WebSocketApi}/*'
+  OnPingIntegration:
+    Type: AWS::ApiGatewayV2::Integration
+    Properties:
+      ApiId: !Ref WebSocketApi
+      Description: OnPing Integration
+      IntegrationType: AWS_PROXY
+      IntegrationUri:
+        Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${WebSocketOnPingFunction.Arn}/invocations
+  OnPingRoute:
+    Type: AWS::ApiGatewayV2::Route
+    Properties:
+      ApiId: !Ref WebSocketApi
+      RouteKey: ping
+      AuthorizationType: NONE
+      OperationName: OnPingRoute
+      Target: !Join
+        - '/'
+        - - 'integrations'
+          - !Ref OnPingIntegration
 
   # SNS
   JacktripSnsTopic:
