--- a/global.yaml
+++ b/global.yaml
@@ -12,8 +12,8 @@ Globals:
       AllowMethods: "'OPTIONS, POST, GET'"
       AllowCredentials: true
     Auth:
-      # AddDefaultAuthorizerToCorsPreflight: False
-      # DefaultAuthorizer: JacktripGlobalCognitoAuthorizer
+      AddDefaultAuthorizerToCorsPreflight: False
+      DefaultAuthorizer: JacktripGlobalCognitoAuthorizer
       Authorizers:
         JacktripGlobalCognitoAuthorizer:
           UserPoolArn:
@@ -32,9 +32,6 @@ Resources:
           Properties:
             Method: post
             Path: /publishsns
-            # Auth:
-            #   Authorizer:
-            #     JacktripGlobalCognitoAuthorizer
             RequestParameters:
               - method.request.header.Authorization:
                   Required: true
@@ -59,8 +56,6 @@ Resources:
           Properties:
             Method: get
             Path: /user
-            Auth:
-              Authorizer: JacktripGlobalCognitoAuthorizer
             RequestParameters:
               - method.request.querystring.user:
                   Required: true
