Update websocket auth

--- a/global.yaml
+++ b/global.yaml
@@ -119,37 +119,29 @@ Resources:
 
   # Websocket authorizer with Lambda function
   # https://github.com/aws-samples/simple-websockets-chat-app/issues/22
-  WebsocketAuthorizer:
+  WebSocketAuthorizer:
     Type: AWS::ApiGatewayV2::Authorizer
     Properties:
       ApiId: !Ref WebSocketApi
       AuthorizerType: REQUEST
-      Name: WebsocketAuthorizer
+      Name: WebSocketAuthorizer
       # https://medium.com/swlh/implementing-secure-web-sockets-with-aws-api-gateway-cognito-dynamodb-and-lambda-b38e02314b42
       # Web Browser’s WebSocket object does not allow you to send any custom header
       IdentitySource:
-        - route.request.querystring.Authorization
-      AuthorizerUri: !Sub 'arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${WebsocketAuthorizerFunction.Arn}/invocations'
-  WebsocketAuthorizerFunction:
+        - 'route.request.querystring.Authorization'
+      AuthorizerUri: !Sub 'arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${WebSocketAuthorizerFunction.Arn}/invocations'
+  WebSocketAuthorizerFunction:
     Type: 'AWS::Serverless::Function'
     Properties:
       FunctionName: !Sub '${AWS::StackName}-websocketAuthorizer-function'
       CodeUri: ./backend/functions/global/websocketAuthorizer
       Handler: websocketAuthorizer.handler
-  WebsocketAuthorizerFunctionPermission:
+  WebSocketAuthorizerFunctionPermission:
     Type: 'AWS::Lambda::Permission'
     Properties:
       Action: 'lambda:InvokeFunction'
-      FunctionName: !Ref WebsocketAuthorizerFunction
+      FunctionName: !Ref WebSocketAuthorizerFunction
       Principal: apigateway.amazonaws.com
-      SourceArn: !Sub 'arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${WebSocketApi}/*'
-  WebsocketAuthorizerIntegration:
-    Type: AWS::ApiGatewayV2::Integration
-    Properties:
-      ApiId: !Ref WebSocketApi
-      Description: WebsocketAuthorizer Integration
-      IntegrationType: AWS_PROXY
-      IntegrationUri: !Sub 'arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${WebsocketAuthorizerFunction.Arn}/invocations'
 
   # Websocket API - heavily inspired from https://serverlessland.com/patterns/apigw-websocket-api-lambda
   WebSocketApi:
@@ -213,7 +205,7 @@ Resources:
       ApiId: !Ref WebSocketApi
       RouteKey: $connect
       AuthorizationType: CUSTOM
-      AuthorizerId: !Ref WebsocketAuthorizer
+      AuthorizerId: !Ref WebSocketAuthorizer
       OperationName: OnConnectRoute
       Target: !Join
         - '/'
