--- a/backend/functions/global/websocketAuthorizer/package.json
+++ b/backend/functions/global/websocketAuthorizer/package.json
@@ -13,8 +13,11 @@
 		"eslint": "^7.28.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-prettier": "^3.4.0",
-		"prettier": "^2.3.1",
+		"prettier": "^2.3.1"
+	},
+	"dependencies": {
 		"jsonwebtoken": "^8.5.1",
-		"node-fetch": "^2.6.1"
+		"node-fetch": "^2.6.1",
+		"jwk-to-pem": "^2.0.5"
 	}
 }
